Fix pane dragging by covering iframe when it happens

--- a/packages/react-component-playground/src/components/component-playground.less
+++ b/packages/react-component-playground/src/components/component-playground.less
@@ -264,6 +264,16 @@
         width: 100%;
         height: 100%;
       }
+
+      // The purpose of the frame overlay is to cover the iframe while user is
+      // dragging the split pane separator. Without the overlay, the dragging
+      // stops once the mouse hits the iframe.
+      .frameOverlay {
+        .stretch();
+
+        background: #fff;
+        opacity: 0.25;
+      }
     }
   }
 
